Add Bearer token.
